BME-182: allow server to disable maps / layers / overlays