@@ -1,6 +1,8 @@
 package com.eerussianguy.blazemap.feature.maps;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.components.events.GuiEventListener;
@@ -8,6 +10,7 @@ import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.resources.ResourceKey;
+import net.minecraft.util.FormattedCharSequence;
 import net.minecraft.world.level.Level;
 
 import com.eerussianguy.blazemap.api.BlazeMapAPI;
@@ -73,8 +76,8 @@ public class MinimapOptionsGui extends BlazeGui implements IMapHost {
     }
 
     @Override
-    public void drawTooltip(PoseStack stack, int x, int y, Component ... lines) {
-        renderTooltip(stack, Arrays.stream(lines).map(Component::getVisualOrderText).toList(), x, y);
+    public void drawTooltip(PoseStack stack, int x, int y, List<? extends Component> lines) {
+        renderTooltip(stack, lines.stream().map(Component::getVisualOrderText).collect(Collectors.toList()), x, y);
     }
 
     @Override
